Fix map z-index

--- a/resources/assets/less/components/map.less
+++ b/resources/assets/less/components/map.less
@@ -17,3 +17,7 @@
 	background-image: url('/images/spritesheet-2x.png');
 	background-image: linear-gradient(transparent, transparent), url('/images/spritesheet.svg');
 }
+
+.leaflet-control, .leaflet-pane, .leaflet-top, .leaflet-bottom {
+	z-index: auto;
+}
